@@ -1,7 +1,7 @@
 #!/usr/bin/python -OO
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/catalyst,v 1.151 2006/04/19 15:34:08 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/catalyst,v 1.152 2006/04/20 15:17:01 wolf31o2 Exp $
 
 # Maintained in full by:
 # Eric Edgar <rocket@gentoo.org>
@@ -11,7 +11,7 @@ import os,sys,imp,string,getopt
 import pdb
 
 __maintainer__="Chris Gianelloni <wolf31o2@gentoo.org>"
-__version__="2.0_rc43"
+__version__="2.0_rc44"
 
 conf_values={}
 
