@@ -1,6 +1,6 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/targets/livecd-stage2/Attic/livecd-stage2-controller.sh,v 1.20 2006/03/22 19:11:24 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/targets/livecd-stage2/Attic/livecd-stage2-controller.sh,v 1.21 2006/04/20 15:17:01 wolf31o2 Exp $
 
 . ${clst_sharedir}/targets/support/functions.sh
 . ${clst_sharedir}/targets/support/filesystem-functions.sh
@@ -88,7 +88,7 @@ case $1 in
 		
 		
 		# Move over the xinitrc (if applicable)
-		# Tthis is moved here, so we can override any default xinitrc
+		# This is moved here, so we can override any default xinitrc
 		if [ -n "${clst_livecd_xinitrc}" ]
 		then
 			cp -f ${clst_livecd_xinitrc} \
